# YuvReader

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/llx278/yuvreaderforandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/texture/: fragment.frag
app/src/main/assets/shader/yuv_texture/: fragment.frag  vertex.vert
app/src/main/cpp/: yuv_to_rgb.cpp
app/src/main/java/com/llx278/yuvreaderforandroid/: BaseActivity.java  BufferSceneRender.java  CameraDeviceStateEventSource.java  CameraErrorException.java  CameraPreviewActivity.java  CameraRender.java  CaptureSessionStateEventSource.java  DrawFrameBufferActivity.java  FrameBufferSceneRenderDemo.java  FrameBufferTexture.java  I420Rectangle.java  I420Texture.java  IRectangle.java  ITexture.java  MainActivity.java  RXCamera2.java  Rectangle.java  SceneRender.java  SelectActivity.java  ShowImageActivity.java  ShowYuvImageActivity.java  ShowYuvImageToRGBActivity.java  SimpleSceneRender.java  Texture.java  VertexHelper.java  YUVSceneRender.java  YUVTexture.java  YuvRectangle.java
app/src/main/java/com/llx278/yuvreaderforandroid/util/: BitMapUtil.java  MyGLUtils.java  ShaderUtil.java  YuvToRGB.java
app/src/main/res/layout/: activity_camera_preview.xml  activity_main.xml  activity_select.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/llx278/yuvreaderforandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
